k8s/laravel-local/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
  namespace: ecommerce-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
        - name: queue
          image: ecommerce-k8s-local:latest
          imagePullPolicy: Never
          command: ["php", "artisan", "queue:work", "--tries=3", "--timeout=90", "--sleep=3"]
