k8s/laravel-local/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  namespace: ecommerce-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: ecommerce-k8s-local:latest
          imagePullPolicy: Never
          command:
            - sh
            - -c
            - while true; do php artisan schedule:run --verbose --no-interaction; sleep 60; done
