k8s/laravel-local/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ecommerce-local
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 8000
