k8s/laravel-local/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ecommerce-local
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
